# FullFastAPITemplate

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  cli.py  main.py  worker.py
app/acquiring/: __init__.py  base.py  factory.py  memory.py  yookassa.py
app/api/: deps.py  router.py
app/api/v1/: accounts.py  auth.py  categories.py  files.py  health.py  notifications.py  users.py
app/broker/: __init__.py  base.py  events.py  factory.py  kafka.py  memory.py  rabbitmq.py
app/cache/: __init__.py  base.py  redis_cache.py
app/clients/: __init__.py  auth.py  base.py  envelope.py  example.py  messages.py  response.py
app/consumers/: __init__.py  notifications.py  users.py
app/core/: config.py  context.py  lifespan.py  logging.py  observability.py  openapi.py
app/db/: ddl.py  query.py  session.py  uow.py
app/decorators/: __init__.py  cache.py  logging.py  retry.py  transaction.py
app/exceptions/: __init__.py  base.py  handlers.py
app/idempotency/: __init__.py  runner.py  store.py
app/middleware/: __init__.py  api_key.py  rate_limit.py  request_context.py  security.py
app/models/: __init__.py  account.py  base.py  outbox.py  profile.py  user.py
app/outbox/: __init__.py  relay.py
app/ratelimit/: __init__.py  limiter.py
app/repositories/: account.py  base.py  outbox.py  user.py
app/scheduler/: __init__.py  jobs.py  scheduler.py
app/schemas/: account.py  auth.py  response.py  user.py
app/security/: __init__.py  cookies.py  jwt.py  password.py  roles.py  session_store.py
app/services/: __init__.py  account.py  auth.py  notification.py  user.py
app/storage/: __init__.py  base.py  factory.py  s3.py
docker/backend/: Dockerfile  entrypoint.sh
docker/certbot/: init-letsencrypt.sh
docker/nginx/: Dockerfile  nginx.conf
docker/nginx/conf.d/: default.conf
docker/nginx/docker-entrypoint.d/: 40-setup.sh
docs/: API.md
docs/adr/: 0001-record-architecture-decisions.md  0002-transactional-outbox.md  0003-argon2-offloading.md  0004-optional-components.md  0005-concurrency-control.md  0006-auth-token-transport.md  0007-eager-loading.md  0008-unit-of-work-lifecycle.md  0009-query-and-search.md  0010-idempotency-keys.md  0011-acquiring-abstraction.md  README.md
loadtest/: README.md  k6.js
migrations/: env.py
migrations/versions/: 0001_initial_users.py  0002_outbox.py  0003_user_version.py  0004_accounts_profiles.py  0005_pg_trgm_search.py  0006_add_acquirer_to_transaction.py
tests/: conftest.py  test_accounts.py  test_acquiring.py  test_auth.py  test_auth_cookies.py  test_broker.py  test_decorators.py  test_docs.py  test_files_api.py  test_health_config.py  test_http_client.py  test_idempotency.py  test_idempotency_required.py  test_messages_client.py  test_notification_service.py  test_notifications_consumer.py  test_observability.py  test_optimistic_lock.py  test_outbox.py  test_perf.py  test_profile.py  test_query.py  test_repositories.py  test_repository_locks.py  test_response_contract.py  test_scheduler.py  test_services.py  test_storage.py  test_uow.py  test_users_consumer.py
